Add readme. Change copy on index page.

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,8 @@
   <head>
   </head>
   <body>
-    <h1>hello</h1>
+    <h1>Movie Favoriteser</h1>
+    <p>Search for movies and favorites them!</p>
     <div class='message-area'>
     </div>
 
