--- a/views/index.html
+++ b/views/index.html
@@ -1,23 +1,29 @@
 <!doctype html>
 <html>
   <head>
+    <title>
+      Movie Favoriteser
+    </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>Movie Favoriteser</h1>
-    <p>Search for movies and favorites them!</p>
-    <div class='message-area'>
-    </div>
+    <div class="container">
+      <h1>Movie Favoriteser</h1>
+      <p>Search for movies and favorites them!</p>
+      <div class='message-area'>
+      </div>
 
-    <form id="movieSearchForm">
-      <input type="text" name="searchParam">
-      <input type="submit" id="movieSearchFormSubmit">
-    </form>
-    <button id="favorites-button">View Favorites</button>
-    <ul class="movie-list">
-    </ul>
+      <form id="movieSearchForm">
+        <input type="text" name="searchParam">
+        <input type="submit" id="movieSearchFormSubmit">
+      </form>
+      <button id="favorites-button">View Favorites</button>
+      <ul class="movie-list">
+      </ul>
   </body>
-<!-- The script.js file is located in the public folder, but you don't -->
-<!-- need to put that in the src below. Sinatra looks in the public folder -->
-<!-- by default. -->
+  </body>
+  <!-- The script.js file is located in the public folder, but you don't -->
+  <!-- need to put that in the src below. Sinatra looks in the public folder -->
+  <!-- by default. -->
   <script src='script.js' type='text/javascript'> </script>
 </html>
