--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,9 @@ body{
 }
 
 html, body, .container{
-  height: 100%;
+  /* Use min-height to make sure the height remains 100% even when the height of the */
+  /* page changes. */
+  min-height: 100%;
 }
 
 .movie-list{
@@ -23,7 +25,15 @@ html, body, .container{
 .movie-list li{
   border: thin black solid;
   margin: 10px;
-  padding: 5px;
   width: 70%;
-
+}
+.title-bar{
+  border-bottom: thin black solid;
+  padding: 5px;
+}
+.title-bar button{
+  float: right;
+}
+.movie-info li{
+  border: none;
 }
